--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                     <a class="nav-link" href="signin.html">ĐĂNG KÍ NHẬN TIN NHẮN VI PHẠM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">THỐNG KÊ</a>
+                    <a class="nav-link" href="count.html">THỐNG KÊ</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2 mySearch" type="text" placeholder="Nhập số điện thoại hoặc biển số xe" style="width: 300px" data-column-index='1'>
+                <input class="form-control mr-sm-2 mySearch" type="text" placeholder="Nhập biển số xe" style="width: 300px" data-column-index='1'>
             </form>
         </div>
     </nav>
@@ -43,16 +43,6 @@
                 </th>
                 <th class="label">Loại xe</th>
                 <th class="input">
-                    <!-- <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Xe Ô Tô
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                            <button class="dropdown-item" type="button">Tất cả</button>
-                            <button class="dropdown-item" type="button">Xe máy</button>
-                            <button class="dropdown-item" type="button">Xe Ô Tô</button>
-                            <button class="dropdown-item" type="button">Xe Đạp Điện</button>
-                        </div>
-                    </div> -->
                     <select id="typeOfTransport" class="select">
                         <option value=""></option>
                         <option value="">Tất cả</option>
@@ -63,24 +53,13 @@
                 </th>
                 <th class="label">Loại vi phạm</th>
                 <th class="input">
-                    <!-- <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenu2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> Tất cả
-                        </button>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenu2">
-                            <button class="dropdown-item" type="button">Vượt đèn đỏ</button>
-                            <button class="dropdown-item" type="button">Lấn làn</button>
-                            <button class="dropdown-item" type="button">Không xi nhan</button>
-                            <button class="dropdown-item" type="button">Không bật đèn</button>
-                            <button class="dropdown-item" type="button">Không đội mũ</button>
-                        </div>
-                    </div> -->
                     <select id="typeOfCrime" class="select">
                         <option value=""></option>
                         <option value="Vượt đèn đỏ">Vượt đèn đỏ</option>
                         <option value="Lấn làn">Lấn làn</option>
                         <option value="Không xi nhan">Không xi nhan</option>
                         <option value="Không bật đèn">Không bật đèn</option>
-                        <option value="Không bật đèn">Không bật đèn</option>
+                        <option value="Không đội mũ">Không đội mũ</option>
                     </select>
                 </th>
             </tr>
