--- a/notice.html
+++ b/notice.html
@@ -26,12 +26,11 @@
                     <a class="nav-link" href="signin.html">ĐĂNG KÍ NHẬN TIN NHẮN VI PHẠM</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">THỐNG KÊ</a>
+                    <a class="nav-link" href="count.html">THỐNG KÊ</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Nhập số điện thoại hoặc biển số xe" style="width: 300px">
-                <button id="mySearch" class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
+                <input class="form-control mr-sm-2" type="text" placeholder="Nhập biển số xe" style="width: 300px">
             </form>
         </div>
     </nav>
